# hitorit

./: .gitignore  .plantuml  CMakeLists.txt
docs/: Doxyfile
include/: TestCommon.hpp
include/BitDomain/: Space.hpp  Support.hpp
include/DiscreteSpace/: BitTensor.hpp  Domain.hpp  IncrementalTensor.hpp  Shape.hpp  ShapeAggregate.hpp  SubDomain.hpp  Tensor.hpp
include/Hitori/: Solution.hpp
include/Topology/: TwoDimensional.hpp
src/BitDomain/: Space.cpp  Support.cpp
src/DiscreteSpace/: BitTensor.cpp  Domain.cpp  Shape.cpp  SubDomain.cpp  Tensor.cpp
src/Hitori/: Solution.cpp
src/Topology/: TwoDimensional.hpp
